# builder-discovery

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  setup.ps1  setup.sh
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: __init__.py  dashboard.py  discovery.py  export.py  organizations.py  people.py  pipeline.py  repositories.py  signals.py
backend/app/collectors/github/: client.py  graphql_queries.py  org_collector.py  profile_enricher.py  repo_search.py  user_search.py
backend/app/collectors/twitter/: __init__.py  client.py
backend/app/db/: engine.py  session.py
backend/app/llm/: client.py  prompts.py
backend/app/models/: __init__.py  contribution_snapshot.py  discovery_run.py  github_profile.py  network_edge.py  note.py  org_membership.py  organization.py  person.py  person_repository.py  repository.py  signal.py  twitter_profile.py
backend/app/processors/: activity_analyzer.py  internal_tool_detector.py  repo_quality_scorer.py  score_compositor.py
backend/app/services/: discovery_service.py  scoring_service.py
backend/scripts/: run_discovery.py  seed_orgs.py
database/seeds/: ai_repo_topics.json  indian_tech_companies.json
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/organizations/: page.tsx
frontend/src/app/people/: page.tsx
frontend/src/app/pipeline/: page.tsx
frontend/src/hooks/: use-api.ts
frontend/src/lib/: api.ts  types.ts  utils.ts
(+12 files in other folders)
